[package]
name = "srch"
version = "0.1.0"
edition = "2021"
authors = ["Vaibhav Sharma <vaibhav27.neo@gmail.com>"]
description = "A tool to filter and list all the images in folder"
keywords = ["cli", "search"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }